+ #225 (LightBDD.XUnit2/LightBDD.NUnit3/LightBDD.MsTest2/LightBDD.Fixie2)(Change) Updated projects to use IProgressNotifier configuration
+ #225 (Core/Framework)(Change) Obsoleted IScenarioProgressNotifier, IFeatureProgressNotifier, DelegatingScenarioProgressNotifier, DelegatingFeatureProgressNotifier and all methods using them

Version 3.3.0
----------------------------------------
+ #221 (VSIX)(Change) Merged Project templates and updated TargetFramework to net5
+ #219 (Core)(New) Added LifetimeScope and IDependencyContainerV2 with support for scope creation with explicit lifetime Ids such as Global, Scenario, Local
+ #219 (Core)(New) Added InstanceScope and reimplemented DefaultDependencyContainer to support dependency registration with Single, Local, Transient and Scenario scope
+ #219 (Core)(New) Added DependencyContainerConfiguration.UseDefault() allowing configuration of DefaultDependencyContainer
+ #219 (Core)(New) Added ConfigureFallbackBehavior() to DefaultDependencyContainer configuration with FallbackResolveBehavior allowing to resolve unregistered types as transient instances or throw exception forcing explicit instantiation
+ #219 (Core)(Change) Updated core engine to initialize container with LifetimeScope.Global, start scenarios with LifetimeScope.Scenario and composite steps with LifetimeScope.Local scopes
+ #143/#219 (Framework)(New) Added IBddRunner.WithContext() and ICompositeStepBuilder.WithContext() overloads allowing to create context using resolver and running additional configuration of the resolved instance with Action<TContext> onConfigure
+ #219 (LightBDD.Autofac)(Change) Updated Autofac integration to implement IDependencyContainerV2 and support InstancePerMatchingLifetimeScope(LifetimeScope.Scenario) registrations